fixed long text truncation in titles and items

--- a/client/mods/item/item.less
+++ b/client/mods/item/item.less
@@ -1,6 +1,6 @@
 li.item {
 	list-style: none;
-	padding: 1em;
+	padding: 1em 4em 1em 1em;
 	margin: 0;
 	min-height: 3em;
 	box-sizing: border-box;
