--- a/client/mods/list/list.less
+++ b/client/mods/list/list.less
@@ -6,7 +6,7 @@
 
 	h1 {
 		padding:1em 0;
-		margin:0 calc(~"50px + 1em");
+		margin:0 4em;
 		font-size:1em;
 		text-align:center;
 		height: 3em;
@@ -25,7 +25,7 @@
 		position: absolute;
 		top:0;
 		height:3em;
-		width: 50px;
+		width:3em;
 		padding:1em;
 		box-sizing:border-box;
 		cursor:pointer;
